--- a/src/css/main.css
+++ b/src/css/main.css
@@ -671,6 +671,10 @@ a, a:hover {
  * FOOD MENU
  */
 
+ #pizzaMenu {
+margin: 5%;
+ }
+
 .food-jumbotron {
   text-align: center;
   overflow: hidden;
